--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>tty1</title>
   <link rel="stylesheet" media="all" href="//cdn.rawgit.com/SDA/terminal/master/dist/terminal-1.0.0.min.css"/>
+  <link rel="stylesheet" href="//fonts.css.network/css?family=Inconsolata" />
 </head>
 <body>
   <div id="terminal"></div>
